v5.0.0/_sources/generated/pcdsdevices.pump.TurboPump.rst.txt
pcdsdevices.pump.TurboPump
==========================

.. currentmodule:: pcdsdevices.pump

.. autoclass:: TurboPump

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - atspeed
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:ATSPEED_DI``
          - 
          - normal
          - 
    
        * - start
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:START_SW``
          - 
          - normal
          - 
    

    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: run
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    