v10.3.0/_sources/generated/pcdsdevices.pump.TurboPump.rst.txt
pcdsdevices.pump.TurboPump
==========================

.. currentmodule:: pcdsdevices.pump

.. autoclass:: TurboPump

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - atspeed
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:ATSPEED_DI``
          - 
          - normal
          - 
    
        * - start
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:START_SW``
          - 
          - normal
          - 
    

    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: run
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: subscriptions
    
    